[package]
name = "deadlock_random_team_gen"
version = "0.1.0"
authors = ["crypdoughdoteth <zkorn1@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7",  features = ["fullstack", "router"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"] 
